welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:6: error: not found: value BaisseBrosse
  BaisseBrosse;leveBrosse
  ^