welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
}


def colorie{
  BaisseBrosse;leveBrosse
}

def petitMotif{
  avance;setCouleurBrosse(Color.RED);colorie;gauche;avance;gauche;avance;
  colorie;gauche;avance;gauche;avance;avance;setCouleurBrosse(Color.BLUE);colorie  
}